@@ -141,6 +141,8 @@
           (http://www.packetfence.org/mantis/view.php?id=680)
         fixed issue in web admin GUI during fingerprint upload
           (http://www.packetfence.org/mantis/view.php?id=681)
+        ensured log file ownership in installer.pl
+          (http://www.packetfence.org/mantis/view.php?id=682)
 
 1.8.1
         authorized @ as first symbol in password
